fix/fix the gap between titel and content

--- a/main.css
+++ b/main.css
@@ -248,6 +248,7 @@ body {
     @media (min-width: 769px) {
       .container__title {
         margin-top: 5rem;
+        margin-bottom: 3rem;
         font-size: 2rem; } }
 
 .header {
@@ -414,8 +415,8 @@ body {
 @media (min-width: 769px) {
   .content {
     display: grid;
-    grid-template: 48px 24px 64px 288px 48px 2px 24px 46px / 50% 5% 45%;
-    grid-template-areas: ". . ." "stepper . cart" ". . cart" "form . cart" ". . cart" "divider . cart" ". . cart" "btn . cart"; } }
+    grid-template: 24px 64px 288px 48px 2px 24px 46px / 50% 5% 45%;
+    grid-template-areas: "stepper . cart" ". . cart" "form . cart" ". . cart" "divider . cart" ". . cart" "btn . cart"; } }
 
 @media (min-width: 1301px) {
   .content {
